--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  <meta name="robots" content="index,follow"> 
  
   <link rel="canonical" href="https://practicerbtexam.pages.dev">
+  <meta name="google-site-verification" content="8ibtfv93eSeYysoOkuOQaoEhPtMzEQsHltrTp46-ozk" />
 
   <script type="application/ld+json">
 {
